--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header nav{
     width: 100%;
     height: 100%;
     min-height: 400px;
-    background: url("..//HTML/images/showcase3jpg.jpg") no-repeat 0;
+    background: url("showcase3jpg.jpg") no-repeat 0;
     background-size: cover,contain;
     border-bottom: black 3px solid;
     color: #f4f4f4;
